# cv_bridge_customize

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  rosdoc.yaml  setup.py
doc/: conf.py  index.rst
include/cv_bridge/: cv_bridge.h  cv_bridge_export.h  rgb_colors.h
python/: CMakeLists.txt
python/cv_bridge/: __init__.py  core.py
python/cv_bridge_customize/: core.py
src/: CMakeLists.txt  cv_bridge.cpp  module.cpp  module.hpp  module_opencv2.cpp  module_opencv3.cpp  module_opencv4.cpp  pycompat.hpp  rgb_colors.cpp
src/boost/core/: scoped_enum.hpp
src/boost/endian/: conversion.hpp
src/boost/endian/detail/: intrinsic.hpp
src/boost/predef/: version_number.h
src/boost/predef/os/: bsd.h  ios.h  macos.h
src/boost/predef/os/bsd/: free.h  net.h
src/boost/predef/other/: endian.h
test/: CMakeLists.txt  conversions.py  enumerants.py  python_bindings.py  test_compression.cpp  test_endian.cpp  test_rgb_colors.cpp  utest.cpp  utest2.cpp
