<package format="2">
  <name>cv_bridge_customize</name>
  <version>1.13.1</version>
  <description>
    This is a customized cv_bridge to solve multiple coexisting opencv verions issue
  </description>
  <author>Tom Notch</author>
  <maintainer email="topnotchymk@gmail.com">Tom Notch</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/cv_bridge</url>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>python</build_depend>
  <build_depend>python-opencv</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>python</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <build_export_depend>libopencv-dev</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <test_depend>rostest</test_depend>
  <test_depend>python-numpy</test_depend>

  <doc_depend>dvipng</doc_depend>
</package>
